--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http": "^0.0.1-security",
     "mongoose": "^6.9.2",
     "puppeteer": "^19.7.2",
+    "router": "^1.3.7",
     "xmldom": "^0.6.0"
   }
 }
